src/App.css
/*fonts*/

@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,600;1,100;1,300&display=swap');

#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 0rem;
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
  font-family: "Raleway", sans-serif;
}
.logo:hover {
  filter: drop-shadow(0 0 2em);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 1em;
}

.read-the-docs {
  color: #888;
}

.eventsContainer {
  flex-direction: row;
  display: flex;
  justify-content: center;
  border: solid;
  border-color: purple;
  border-width: 1em;
}

.badgeContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.sectionOne {
  border: #61dafbaa;
  border-width: 1px;
  border-style: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: space-between;
}

.header {
  font-weight: 100;
  margin-top: 70px;
  margin-bottom: 70px;
  color: black
}

.header :hover {
  color: black
}

.bookCard {
  display: flex;
  flex-direction: row;
}

.mantine-AppShell-main {
  padding-left: 30px;
  padding-right: 30px;
  margin: 0;
  width: 100vw;
}

/*Home*/

.homeShell a {
  color: black;
  opacity: 0.9;
}

.quoteCard {
  background-color: #f8f9fa;
}

#mainQuoteContainer {
  border: #646cffaa;
  border-width: 2px;
  border-style: none;
  width: 500px;
}

#availableNowBadge {
  min-width: 150px;
  margin-top: 50px;
  width: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#availableNowBadgeContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.bio {
  font-size: large;
}

.bio span {
  font-style: italic;
}

#availableNowBadge {
  background-color: #f8f9fa;
  width: 30vw;
}

/*Contact*/

div[role="alert"] {
  color: red;
  margin-top: 1em;
  margin-bottom: 1em;
}

.message-chars-left {
  width: 600px;
  text-align: left;
  opacity: 0.3;
}

.status-message {
  opacity: 0;
  color: blue;
}

.status-message-success {
  opacity: 1;
  color: green;
}

.status-message-failure {
  opacity: 1;
  color: red;
}

#messageInput {
  height: 200px;
}

.contact {
  flex-direction: column;
  display: flex;
  justify-content: center;
  align-items: center;
}

/*NavBar*/

#logo {
  margin-left: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
}

.navBarLink {
  font-size: xx-large;
  color: black;
  opacity: 0.8;
  box-shadow: inset 0 0 0 0 #edf2ff;
  margin: 0 -0.25rem;
  padding: 0 0.25rem;
  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
}

.navBarLink:hover {
  box-shadow: inset 100vw 0 0 0 #edf2ff;
  color: black;
}

.navBarLink:active {
  color: white;
}

/*FriendsPage*/

.friendsBanner {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.friendShell a {
  color: black;
  opacity: 0.9;
}

#friendsPageBookContainer {
  display: flex;
  justify-content: center;
  align-content: center;
}

.mantine-Carousel-controls {
  display: none;
}

.carouselQuote {
  font-size: larger;
}

@media screen and (max-width: 992px) {
  .carouselQuote {
    font-size: medium;
  }
}

@media screen and (max-width: 600px) {
  .carouselQuote {
    font-size: small;
  }
}

@media screen and (max-width: 480px) {
  .carouselQuote {
    font-size: smaller;
  }
}

@media screen and (max-width: 992px) {
  #bookBlurb {
    font-size: medium;
  }
}

@media screen and (max-width: 480px) {
  #bookBlurb {
    font-size: small;
  }
}

#bookBlurk span {
  font-style: italic;
}

#friendsPageBookContainer {
  margin-top: -50px;
  margin-bottom: -30px;
}

/*Table Component*/

.table {
  text-align: left;
}

.table span {
  text-align: center;
}

.card {
  width: 500px;
  font-size: 15px;
  color: black;

  position: absolute;
  z-index: 100;

  bottom: 30px;
  left: 50%;
  transform: translateX(-50%);
  transform: translateY(+50%);
}

.link-with-preview {
  color: #1864ab;
  position: relative;
}

.link-with-preview:hover {
  color: #ae3ec9;
}

.link-with-preview:active {
  color: #862e9c;
}

.card img {
  width: 100%;
  max-height: 60%;
}

.card-title {
  font-size: 16px;
}

/*Work*/

.link {
  color: #1864ab;
}

.link:hover {
  color: #ae3ec9;
  text-decoration: underline;
}

.link:active {
  color: #862e9c;
}

/* Admin */ 

.crudFormContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.crudFormContainer button {
width: 10%
}

.crudForm label {
  display: inline-block;
  float: left;
  clear: left;
  width: 250px;
  text-align: right;
}

.crudForm input {
  width: 500px;
  height: 40px;
  margin-left: 30px;
  margin-bottom: 10px;
  margin-right: 200px;
  display: inline-block;
  float: left;
}

